methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: return outside method definition
for (i <- 1 to 7) {if (haveBaggle()) {return}; droite(); avance(); gauche(); } 
                                      ^